--- a/sass/components/_tags.scss
+++ b/sass/components/_tags.scss
@@ -35,3 +35,23 @@
 			padding: 3px;
 	}
 }
+
+.page-taxonomy {
+	h2 {
+		margin-top: 45px;
+		font-size: 2.0em;
+	}
+
+}
+
+.node-readmore, .comment-comments {
+	text-transform: $up;
+	font-size: 0.8em;
+	a:hover {
+		text-decoration: $line;
+	}
+}
+
+
+
+
