--- a/sass/layout/_media.scss
+++ b/sass/layout/_media.scss
@@ -1,31 +1,64 @@
+/* ==========================================================================
+   Media Queries
+   ========================================================================== */
+
 $width-small: 240px;
-$width-medium: 480px;
+$width-medium: 500px;
 $width-large: 768px;
 
 @media (min-width: $width-small) and (max-width: $width-medium) {
 
+	p {
+		font-size: 22px;
+		line-height: 27px;
+		padding: 0px 15px 0px 15px;
+	}
+	
+	p:first-letter {
+		font-size: 35px;
+	}
+	
+	.views-field-title, .view h2 {
+		font-size: 2.4em;
+	}
+	
 	#site-info {
 		float: none;
 		text-align: center;
 		padding-top: 15px;
 	}
 
-	h1#site-name {
+	#site-name {
 		padding-bottom: 15px;
 		margin-top: 0px;
 		line-height: 20px;
 	}
-
-	header {
-		margin-bottom: 5px;
+	
+	blockquote {
+		margin: 10px;
+	}
+	
+	#menu {
+		text-align: center;
+		margin-bottom: 30px;
+	}
+	
+	#block-system-main {
+		margin-bottom: 50px;
+	}
+	
+	#page-title {
+		font-size: 2.4em;
+		margin-bottom: 0px;
 	}
 
 	#logo {
 		float: none;
 		padding-left: 22%;
+		margin-bottom: 20px;
 	}
 
-	#page .content {
+	.content {
 		padding-left: 10px;
 		padding-right: 10px;
 	}
@@ -34,14 +67,8 @@ $width-large: 768px;
 		padding-left: 0px;
 	}
 
-	.views-field-title {
-		font-size: 2.4em;
-	}
-
-	p {
-		font-size: 22px;
-		line-height: 27px;
-		padding: 0px 15px 0px 15px;
+	header {
+		margin-bottom: 5px;
 	}
 }
 
@@ -50,6 +77,14 @@ $width-large: 768px;
 	#page .content, header {
 		padding-left: 10px;
 		padding-right: 10px;
+	}
+	
+	blockquote {
+		margin: 10px;
+	}
+	
+	#block-system-main {
+		margin-bottom: 50px;
 	}
 
 	.region-content {
