--- a/sass/layout/_posts.scss
+++ b/sass/layout/_posts.scss
@@ -5,7 +5,10 @@
 /**
  * Spacing between each Post
  */
-.field-content, .views-row, .node-article, .node-posts {
+.field-content,
+.views-row,
+.node-article,
+.node-posts {
 	margin-bottom: 5%;
 }
 
@@ -23,14 +26,15 @@ blockquote {
  */
 #block-system-main .node-readmore {
 	float:right;
-	display:inline;
+	display: inline;
 	margin-right: 3px;
 	background-color: $lo;
 	padding: 4px;
 	font-size: 0.8em;
 }
 
-.node-readmore, .comment-comments {
+.node-readmore,
+.comment-comments {
 	text-transform: $up;
 	font-size: 0.8em;
 	a:hover {
