--- a/sass/base/_content.scss
+++ b/sass/base/_content.scss
@@ -33,7 +33,12 @@ a {
    Headers & Titles
    ========================================================================== */
 
-#{headings()} {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     line-height: 100%;
     font-family: $lato;
 	margin-top: 0px;
@@ -48,6 +53,7 @@ h1 {
 h2 {
 	font-size: 2.6em;
 	@extend #page-title;
+	margin-bottom: 0px;
 }
 
 h3 {
@@ -60,6 +66,10 @@ h4 {
 	font-size: 2.2em;
 }
 
+.page-comment h1#page-title {
+	color: $grey;
+}
+
 /**
  * Name of Site & Title of Pages
  */
@@ -69,19 +79,21 @@ h4 {
 	font-weight: 700;
 	font-size: 2.8em;
 	margin-top: 40px;
-	a {
-		color: $grey;
-		&:hover {
-			color: $orange;
-		}
-	}
 }
 
+#site-name a {
+	color: $grey;
+}
+
+#site-name a:hover {
+	color: $orange;
+}
+
+/**
+ * Views Title
+ */
+.views-field-title,
 #page-title {
-	margin-bottom: 0px;
-}
-
-.views-field-title, #page-title {
     text-shadow: $shadow;
 	text-align:center;
 	text-transform: $up;
