--- a/sass/layout/_media.scss
+++ b/sass/layout/_media.scss
@@ -8,86 +8,121 @@ $width-large: 786px;
 
 @media (max-width: $width-small) {
 
-	p {
-		font-size: 22px;
-		line-height: 27px;
-		padding: 0px 15px 0px 15px;
-	}
+  p {
+    font-size: 22px;
+    line-height: 27px;
+    padding: 0px 15px 0px 15px;
+  }
 
-	p:first-letter {
-		font-size: 35px;
-	}
+  p:first-letter {
+    font-size: 35px;
+  }
 
-	.views-field-title, .view h2 {
-		font-size: 2.4em;
-	}
+  blockquote {
+    margin: 10px;
+  }
 
-	#site-info {
-		float: none;
-		text-align: center;
-		padding-top: 15px;
-	}
+  .views-field-title,
+  .view h2,
+  #page-title {
+    font-size: 2.4em;
+  }
 
-	#site-name {
-		padding-bottom: 15px;
-		margin-top: 0px;
-		line-height: 20px;
-	}
+  h2 {
+    font-size: 2.4em;
+    margin-bottom: 0px;
+  }
 
-	blockquote {
-		margin: 10px;
-	}
+  h3 {
+    font-size: 1.8em;
+  }
 
-	#menu {
-		text-align: center;
-		margin-bottom: 30px;
-	}
+  #site-info {
+    float: none;
+    text-align: center;
+    padding-top: 15px;
+  }
 
-	#block-system-main {
-		margin-bottom: 50px;
-	}
+  #site-name {
+    padding-bottom: 15px;
+    margin-top: 0px;
+    line-height: 20px;
+  }
 
-	#page-title {
-		font-size: 2.4em;
-		margin-bottom: 0px;
-	}
+  #logo {
+    float: none;
+    padding-left: 22%;
+    margin-bottom: 20px;
+  }
 
-	#logo {
-		float: none;
-		padding-left: 22%;
-		margin-bottom: 20px;
-	}
+  header {
+    margin-bottom: 5px;
+  }
 
-	.content {
-		padding-left: 10px;
-		padding-right: 10px;
-	}
+  #menu {
+    text-align: center;
+    margin-bottom: 30px;
+  }
 
-	.region-content {
-		padding-left: 0px;
-	}
+  #block-system-main {
+    margin-bottom: 50px;
+  }
 
-	header {
-		margin-bottom: 5px;
-	}
+  .content {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .region-content {
+    padding-left: 0px;
+  }
+
+  #block-system-main .comment-comments {
+    display: none;
+  }
+
+  #block-system-main .comment-add {
+    display: none;
+  }
+
+  .front .field-type-datetime {
+    display:none;
+  }
+
+  .field-type-taxonomy-term-reference .field-label {
+    display: none;
+  }
+
+  #comments h2.title {
+    margin-bottom: 25px;
+  }
 }
 
 @media (min-width: $width-medium) and (max-width: $width-large) {
 
-	#page .content, header {
-		padding-left: 10px;
-		padding-right: 10px;
-	}
+  blockquote {
+    margin: 10px;
+  }
 
-	blockquote {
-		margin: 10px;
-	}
+  #block-system-main {
+    margin-bottom: 50px;
+  }
 
-	#block-system-main {
-		margin-bottom: 50px;
-	}
+  .region-content {
+    padding-left: 1%;
+  }
 
-	.region-content {
-		padding-left: 1%;
-	}
+  #page .content,
+  header {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  #block-system-main .comment-comments {
+    display: none;
+  }
+
+  #block-system-main .comment-add {
+    display: none;
+  }
 }
