--- a/sass/themes/_admin.scss
+++ b/sass/themes/_admin.scss
@@ -2,6 +2,7 @@
    Admin Theme Styles
    ========================================================================== */
 
-.submitted, #block-system-main .comment_forbidden {
+.submitted,
+#block-system-main .comment_forbidden {
 	display:none;
 }
