--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,3 @@
-@import url("http://fonts.googleapis.com/css?family=Lato");
-@import url("http://fonts.googleapis.com/css?family=Crimson+Text");
-/* ==========================================================================
-   Google Fonts
-   ========================================================================== */
-/**
- * Lato & Crimson via Google
- */
 /* ==========================================================================
    Variables
    ========================================================================== */
@@ -534,6 +526,18 @@ img {
 
   #comments h2.title {
     margin-bottom: 25px;
+  }
+
+  input {
+    width: 100%;
+  }
+
+  input[type="submit"] {
+    margin-bottom: 10px;
+  }
+
+  .page-user ul.primary li {
+    display: block;
   }
 }
 @media (min-width: 551px) and (max-width: 786px) {
